profile: editor: Add setting to preserve the working directory
The default value of the setting is 'nothing', which retains the
current behaviour of preserving the working directory only when the
command is a shell.

Therefore, unless explicitly changed, the 'preserve working directory'
check-button is kept synchronized with the 'use custom command'
check-button without altering the value of the underlying setting. To
make this work, an explicit signal handler is used to track changes to
the 'preserve working directory' check-button, as opposed to binding
it directly to the setting. This ensures that changes to the button
not initiated by user action don't modify the setting.

https://gitlab.gnome.org/GNOME/gnome-terminal/issues/126

--- a/src/preferences.ui
+++ b/src/preferences.ui
@@ -1818,6 +1818,21 @@
                             <property name="column_spacing">12</property>
                             <property name="row_spacing">6</property>
                             <child>
+                              <object class="GtkCheckButton" id="preserve-working-directory-checkbutton">
+                                <property name="label" translatable="yes">_Preserve working directory</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="use_underline">True</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="top_attach">0</property>
+                                <property name="left_attach">0</property>
+                                <property name="width">2</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkCheckButton" id="login-shell-checkbutton">
                                 <property name="label" translatable="yes">_Run command as a login shell</property>
                                 <property name="visible">True</property>
@@ -1827,7 +1842,7 @@
                                 <property name="draw_indicator">True</property>
                               </object>
                               <packing>
-                                <property name="top_attach">0</property>
+                                <property name="top_attach">1</property>
                                 <property name="left_attach">0</property>
                                 <property name="width">2</property>
                               </packing>
@@ -1842,7 +1857,7 @@
                                 <property name="draw_indicator">True</property>
                               </object>
                               <packing>
-                                <property name="top_attach">1</property>
+                                <property name="top_attach">2</property>
                                 <property name="left_attach">0</property>
                                 <property name="width">2</property>
                               </packing>
@@ -1857,7 +1872,7 @@
                                 <property name="xalign">0</property>
                               </object>
                               <packing>
-                                <property name="top_attach">2</property>
+                                <property name="top_attach">3</property>
                                 <property name="left_attach">0</property>
                               </packing>
                             </child>
@@ -1868,7 +1883,7 @@
                                 <property name="hexpand">True</property>
                               </object>
                               <packing>
-                                <property name="top_attach">2</property>
+                                <property name="top_attach">3</property>
                                 <property name="left_attach">1</property>
                               </packing>
                             </child>
@@ -1882,7 +1897,7 @@
                                 <property name="xalign">0</property>
                               </object>
                               <packing>
-                                <property name="top_attach">3</property>
+                                <property name="top_attach">4</property>
                                 <property name="left_attach">0</property>
                               </packing>
                             </child>
@@ -1901,7 +1916,7 @@
                                 </child>
                               </object>
                               <packing>
-                                <property name="top_attach">3</property>
+                                <property name="top_attach">4</property>
                                 <property name="left_attach">1</property>
                               </packing>
                             </child>
